# earth-data-kit

./: .gitignore  Dockerfile  Dockerfile.release  LAUNCHER.md  Makefile  README.md  before-build.sh  build-and-install.sh  build-and-release.sh  build-edk.sh  check-prereq.sh  colors.sh  deploy-docs.sh  docker-compose.yml  exec-edk.sh  get-s5cmd.sh  helpers.sh  init.sh  install-gdal.sh  install-s5cmd.sh  install.sh  launcher.sh  pyproject.toml  sample.env  setup.py  start-notebook.sh  test.tif.aux.xml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: documentation.yml
benchmarks/: executor.py  read_edk.py  read_gdal.py  read_gdal_parallel.py  read_xarray.py  read_xarray_dask.py
docs/: CODEOWNERS.md  conf.py  index.rst
docs/_static/: sync_and_stitch.txt
docs/markdowns/: stitching.md
docs/source/: api-reference.rst  conf.py  contents.rst  developer-docs.rst  examples.rst  getting-started.rst  index.rst  releases.rst  roadmap.rst  stitching.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: index.html
docs/source/api-references/: dataset.rst  edk-accessor.rst
docs/source/developer-docs/: git-branching.rst  releases.rst
docs/source/examples/: earth_engine.rst  s3.rst
docs/source/notebooks/: import-edk.ipynb
docs/source/releases/: v0.1.2.rst
docs/source/stitching/: defining-source.rst  example-modis-pds.rst  using-a-grid-file.rst  using_a_grid_file.py  without-a-grid-file.rst  without_a_grid_file.py
earth_data_kit/: High_Level.md  Roadmap.md  Use-Cases.md  __init__.py
earth_data_kit/docs/: AI.md  Stitching.md
earth_data_kit/stitching/: Readme.md  __init__.py  constants.py  decorators.py  geo.py  helpers.py
earth_data_kit/stitching/classes/: band.py  dataset.py  tile.py
earth_data_kit/stitching/engines/: commons.py  earth_engine.py  https.py  planetary_comp.py  planetary_computer.py  s3.py  stac.py
earth_data_kit/stitching/formats/: earth_engine.py  geotiff.py  grib2.py  netcdf.py  stac_asset.py
earth_data_kit/stitching/shared_libs/builds/: go-lib
earth_data_kit/stitching/shared_libs/earth_data_kit/: main.go
earth_data_kit/stitching/shared_libs/earth_data_kit/lib/: helpers.go  list_files.go  s5cmd.go  save_inventory.go
earth_data_kit/stitching/shared_libs/spacetime_tools/: go.mod
earth_data_kit/stitching/shared_libs/spacetime_tools/lib/: s5cmd.go
earth_data_kit/utilities/: __init__.py  geo.py  helpers.py  reproject.py  transform.py
earth_data_kit/viz_server/: __init__.py  cache.py  commons.py  server.py  tile.py
earth_data_kit/viz_ui/viz-ui/: package-lock.json  package.json  vite.config.js
earth_data_kit/viz_ui/viz-ui/src/: index.html  index.js
earth_data_kit/xarray_boosted/: __init__.py  commons.py  edk_accessor.py  entrypoint.py  io.py  plot.py
earth_data_kit/xarray_boosted/classes/: deck.py  folium.py
earth_data_kit/xarray_boosted/plotters/: datashader.py  folium.py
examples/: How-To-Run.md  goes.py  sample.env  sentinel2-era5.py  sentinel2.py  stitching.ipynb  stitching.py
scripts/: deploy-docs.sh
spacetime_tools/: Makefile  Readme.md  __init__.py  examples.py  executor.py
spacetime_tools/stitching/: constants.py  decorators.py  discover.py  everything.py  filters.py  geo.py  helpers.py  space_filters.py  stitch.py  sync.py  sync_and_stitch.py  time_filters.py  wildcard_utils.py
spacetime_tools/stitching/classes/: dataset.py  tile.py
spacetime_tools/stitching/engines/: base.py  s3.py
spacetime_tools/stitching/shared_libs/spacetime_tools/: go.mod  main.go
tests/: config.env
tests/basics/: test_interface.py
tests/fixtures/: constants.py
tests/fixtures/goldens/: gee-base-case.tar  gee-no-time-dim.tar  s3-grid-file.tar  s3-multiple-files.tar  s3-single-file.tar
tests/fixtures/outputs/: stitching-with-grid-file.csv
tests/ndarray/: test_indexing.py
tests/stitching/: test_grid_file.py  test_without_grid_file.py
tests/stitching/earth_engine/: test_base_case.py  test_no_time_dim.py
tests/stitching/planetary_computer/: test_landsat.py  test_lulc.py  test_sentinel2.py
tests/stitching/s3/: test_grid_file.py  test_multiple_files.py  test_single_file.py  test_wo_grid_file.py
tests/stitching/warping/: test_src_tgt_options.py
(+14 files in other folders)
