[tool.poetry]
name = "earth-data-kit"
version = "0.1.2.dev20250512"
description = "Making GIS data analysis cheap and easy"
license = "Apache-2.0"
authors = ["Siddhant Gupta <siddhantgupta3@gmail.com>"]
readme = "README.md"
include = ["earth_data_kit/stitching/shared_libs/builds/*"]
exclude = ["earth_data_kit/stitching/shared_libs/earth_data_kit/*"]

[tool.poetry_bumpversion.file."earth_data_kit/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."docs/source/conf.py"]
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.4"
python-dotenv = "^1.0.1"
zarr = "^2.18.2"
netcdf4 = "^1.7.1.post2"
earthengine-api = "^1.5.2"
python-levenshtein = "^0.26.1"
lxml = "^5.3.1"
folium = "^0.19.5"
matplotlib = "^3.10.1"
xarray = "^2025.1.2"
dask = "^2025.2.0"
tqdm = "^4.67.1"
rio-tiler = "^7.6.0"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.3.2"
sphinx = "^7.4.0"
furo = "^2024.5.6"
pytest-xdist = "^3.6.1"
black = "^25.1.0"
sphinx-copybutton = "^0.5.2"
rasterio = "^1.4.3"
rioxarray = "^0.18.2"
pyarrow = "^19.0.1"
ipycytoscape = "^1.3.3"
gcsfs = "^2025.3.0"
dask = {extras = ["distributed"], version = "^2025.3.0"}
bokeh = "^3.7.0"
pytest-order = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.plugins."xarray.backends"]
edk_dataset = "earth_data_kit.xarray_boosted.entrypoint:EDKDatasetBackend"

[tool.poetry.requires-plugins]
poetry-bumpversion = "^0.3.3"