[tool.poetry]
name = "earth-data-kit"
version = "0.1.3.dev20250619"
description = "Making GIS data analysis cheap and easy"
license = "Apache-2.0"
authors = ["Siddhant Gupta <siddhantgupta3@gmail.com>"]
readme = "README.md"

[tool.poetry_bumpversion.file."earth_data_kit/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."docs/source/conf.py"]
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[tool.poetry_bumpversion.file."setup.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.requires-plugins]
poetry-bumpversion = "^0.3.3"